--- a/geonode/templates/account/signup.html
+++ b/geonode/templates/account/signup.html
@@ -36,12 +36,12 @@
                                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-2 {% if form.title.errors %}has-error{% endif %}">
                                     <label for="{{ form.title.id_for_label }}" class="control-label">{{ form.title.label }}</label>
                                     {{ form.title |attr:"class:form-control" }}
-                                    {% if form.title.errors %}{{ form.title.errors.as_text }}{% endif %}                                            
+                                    {% if form.title.errors %}<p class="help-block">{{ form.title.errors.as_text|safe }}</p>{% endif %}                                            
                                 </div>
                                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-5 {% if form.first_name.errors %}has-error{% endif %}">
                                     <label for="{{ form.first_name.id_for_label }}" class="control-label">{{ form.first_name.label }}</label>
                                     {{ form.first_name |attr:"class:form-control" }}
-                                    {% if form.first_name.errors %}{{ form.first_name.errors|safe }}{% endif %}                                            
+                                    {% if form.first_name.errors %}<p class="help-block">{{ form.first_name.errors.as_text|safe }}</p>{% endif %}                                            
                                 </div>
                                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-5 {% if form.last_name.errors %}has-error{% endif %}">
                                     <label for="{{ form.last_name.id_for_label }}" class="control-label">{{ form.last_name.label }}</label>
